syntax = "proto3";

package mizer.media;

message AddTagToMediaRequest {
  string media_id = 1;
  string tag_id = 2;
}

message RemoveTagFromMediaRequest {
  string media_id = 1;
  string tag_id = 2;
}

message RelinkMediaRequest {
  string media_id = 1;
  string path = 2;
}

message MediaTag {
  string id = 1;
  string name = 2;
}

message MediaFiles {
  repeated MediaFile files = 1;
  MediaFolders folders = 2;
  repeated MediaTag tags = 3;
}

message MediaFile {
  string id = 1;
  string name = 2;
  MediaType type = 3;
  MediaMetadata metadata = 4;
  string file_path = 5;
  optional string thumbnail_path = 6;
  optional bool file_available = 7;
}

message MediaMetadata {
  string source_path = 1;
  uint64 file_size = 2;
  repeated MediaTag tags = 3;
  optional Dimensions dimensions = 4;
  optional uint64 duration = 5;
  optional double framerate = 6;
  optional string album = 7;
  optional string artist = 8;
  optional uint32 sample_rate = 9;
  optional uint32 audio_channel_count = 10;

  message Dimensions {
    uint64 width = 1;
    uint64 height = 2;
  }
}

enum MediaType {
  IMAGE = 0;
  AUDIO = 1;
  VIDEO = 2;
  VECTOR = 3;
  DATA = 4;
}

message MediaFolders {
  repeated string paths = 1;
}

message ImportMediaRequest {
  repeated string files = 1;
}
